<resources>
    <string name="app_name">HangOutApp</string>
    <string name="event_list_title">Мероприятия</string>
    <string name="invite_list_title">Приглашения</string>
    <string name="map_title">Карта</string>
    <string name="profile_title">Профиль</string>
    <string name="register">Регистрация</string>
    <string name="username">Никнейм</string>
    <string name="phone_number">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="register_to_login">Уже зарегистрированы? Нажмите, чтобы войти</string>
    <string name="login">Авторизация</string>
    <string name="login_button">Войти</string>
    <string name="login_to_register">Нет аккаунта? Нажмите, чтобы зарегистрироваться</string>
    <string name="email">Электронная почта</string>
    <string name="error_input_email">Неверный формат электронной почты</string>
    <string name="error_input_password">Пароль должен содержать не менее 8 символов</string>
    <string name="error_input_username">Никнейм должен содержать от 1 до 30 символов</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="event_avatar">Event Avatar</string>
    <string name="event_location">Event Location</string>
    <string name="add_event_item">Add Event Item</string>
</resources>