<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="eventItem"
            type="edu.mirea.onebeattrue.hangoutapp.domain.eventlist.entities.EventItem" />
    </data>

    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"

        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivAvatar"
                android:layout_width="64dp"
                android:layout_height="64dp"

                android:layout_margin="8dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                android:src="@drawable/splash_logo"
                android:contentDescription="@string/event_avatar" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_margin="8dp"

                android:text="@string/event_name"

                app:layout_constraintStart_toEndOf="@id/ivAvatar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_margin="8dp"

                android:text="@string/event_date"

                app:layout_constraintStart_toEndOf="@id/ivAvatar"
                app:layout_constraintTop_toBottomOf="@id/tvName"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_margin="8dp"

                android:text="@string/event_time"

                app:layout_constraintStart_toEndOf="@id/ivAvatar"
                app:layout_constraintTop_toBottomOf="@id/tvDate"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_margin="8dp"

                android:text="@string/event_location"

                app:layout_constraintStart_toEndOf="@id/ivAvatar"
                app:layout_constraintTop_toBottomOf="@id/tvTime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>


